<resources>
    <string name="app_name">Calculadora Simples</string>
    <string name="canal">CFB Cursos - Canal Professor Bruno</string>
    <string name="curso">Curso de Android Studio</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="valor1">Digite o Primeiro Valor</string>
    <string name="valor2">Digite o Primeiro Valor</string>
</resources>