<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:background="@color/cinza"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculadora"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor1" />

        <EditText
            android:id="@+id/et_valor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned|textPersonName|numberDecimal"
            android:numeric="signed|decimal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor2" />

        <EditText
            android:id="@+id/et_valor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned|textPersonName|numberDecimal"
            android:numeric="signed|integer|decimal" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/somar" />

        <Button
            android:id="@+id/btn_subitraicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/subtrair" />

        <Button
            android:id="@+id/btn_multiplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btn_divisao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="opera"
            android:text="@string/dividir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>